--- a/src/style/Card.css
+++ b/src/style/Card.css
@@ -4,16 +4,16 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
-  width: 100%;
   padding: 5px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 
   & .card-header {
     padding: 5px;
 
     img {
-      width: 200px;
-      height: 150px;
+      width: 300px;
+      height: 300px;
     }
   }
 
@@ -28,5 +28,35 @@
     width: 100%;
     height: 60px;
     box-sizing: border-box;
+  }
+
+  & .card-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    & .add-button {
+      color: #fff;
+      background-color: #2e52f3;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+
+    & .remove-button {
+      color: #fff;
+      background-color: #f12626;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  &:hover {
+    transform: translateY(-5px);
   }
 }
