Finalizado as seções, a-cards, produtos mais vendidos e footer, criado sistema de clique que cuida da visibilidade das seções.

--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,9 @@ body {
   display: flex;
   justify-content: center;
   background-color: #2e1f26;
-  width: auto;
-  height: 100%;
+  width: 100vw;
+  height: auto;
+  box-sizing: border-box;
 }
 
 h1 {
