--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,21 @@
 @import "./style/PopUp.css";
 @import "./style/Side-menu.css";
 @import "./style/Formulario-login.css";
+@import "./style/Footer.css";
 
 /* Import de animações */
 @import "./style/animations/Animation.css";
 
 .main-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   min-width: 90vh;
+  height: 150vh;
   padding: 5px;
   margin: 10px;
+  box-sizing: border-box;
 
   & .header-section {
     display: flex;
