--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -4,7 +4,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 180vh;
+    padding: 10px;
+    min-width: 90vw;
 
     & .header-home {
         display: flex;
@@ -62,59 +63,66 @@
 
     & .home__apresentations-cards {
         flex-wrap: nowrap;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
         align-items: center;
         gap: 10px;
         border-radius: 8px;
-        padding: 10px 0;
-        margin: 10px 0;
-        width: 100%;
-        height: 500px;
+        padding: 20px 5px;
+        margin: 20px 0;
+        width: 90vw;
+        height: 100%;
         box-sizing: border-box;
 
-        & .a-cards {
+        & .apresentation-cards__container {
             display: flex;
-            flex-direction: column;
-            justify-content: center;
+            flex-direction: row;
+            justify-content: space-between;
             align-items: center;
-            color: #fff;
-            border: 1px solid #fffcfc;
-            border-radius: 8px;
-            padding: 5px;
-            width: 20%;
-            height: 320px;
-            box-shadow: 5px 9px 48px 0px rgba(255,255,255,0.75) inset;
-            -webkit-box-shadow: 5px 9px 48px 0px rgba(255,255,255,0.75) inset;
-            -moz-box-shadow: 5px 9px 48px 0px rgba(255,255,255,0.75) inset;
-            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8);
+            width: 100%;
+            
+            & .a-cards {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                color: #fff;
+                border: 1px solid #fffcfc;
+                border-radius: 8px;
+                padding: 5px;
+                width: 20%;
+                height: 320px;
+                box-shadow: 5px 9px 48px 0px rgba(255,255,255,0.75) inset;
+                -webkit-box-shadow: 5px 9px 48px 0px rgba(255,255,255,0.75) inset;
+                -moz-box-shadow: 5px 9px 48px 0px rgba(255,255,255,0.75) inset;
+                text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8);
 
-            img {
-                
-                width: 50%;
-            }
+                img {
+                    
+                    width: 50%;
+                }
 
-            & .apresentions-cards__description {
-                text-align: center;
-                width: 100%;
-                box-sizing: border-box;
+                & .apresentions-cards__description {
+                    text-align: center;
+                    width: 100%;
+                    box-sizing: border-box;
+                }
             }
         }
     }
 
     & .home__apresentations-cards.hidden {
-        display: flex;
+        display: none;
         opacity: 0;
         max-height: 0;
         overflow: hidden; /* Garante que o conteúdo não vaze */
-        transition: opacity 0.5s ease-out, max-height 0.5s ease-out; /* Opcional: para animação */
+        transition: opacity 0.5s ease-out, max-height 0.5s ease-out; 
     }
 
     /* O estado visível */
     & .home__apresentations-cards.visible {
-        opacity: 1;
         display: flex;
-        max-height: 1000px; /* Um valor alto o suficiente para mostrar o conteúdo */
+        opacity: 1;
     }
 
     & .next-page-button-section {
@@ -141,26 +149,105 @@
     }
 
     & .most-purchased-section {
-        display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 10px;
+        gap: 20px;
         color: #fff;
-        border: 1px solid #000;
         padding: 15px;
+        width: 100%;
+        height: 100%;
+        margin: 10px 0;
+    
 
-        & .most-purchased-cards {
-            border: 1px solid #fffefe;
-            border-radius: 15px;
-            padding: 5px;
-            box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+        & .most-purchased-section__container {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items:center;
+            gap: 20px;
+            padding: 20px 5px;
+            margin: 20px 0;
+            width: 100%;
+            height: 100%;
 
-            & img {
+            & .most-purchased-cards {
+                border: 1px solid #fffefe;
                 border-radius: 15px;
-                width: 300px;
-                height: 250px;
+                padding: 5px;
+                box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+
+                & .most-purchased__icon {
+                    position: absolute;
+                    cursor: pointer;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 50%;
+                    background-color: #df7850;
+                    padding: 6px;
+                    margin-top: 13%;
+                    margin-left: 13%;
+                    width: 30px;
+                    height: 30px;
+                    box-shadow: 1px 1px 3px #000;
+
+                    & .bi-arrows-move {
+                        display: inline-block;
+                        font-size: 1.9rem;
+                        text-align: center;
+                        transition: all 0.5s ease;
+
+                        &:hover {
+                            transform: rotate(130deg);
+                        }
+                    }
+
+                    .tooltip {
+                        position: absolute;
+                        visibility: hidden;
+                        opacity: 0;
+                        white-space: nowrap;
+                        pointer-events: none;
+                        color: #fff;
+                        font-size: 0.9rem;
+                        border-radius: 6px;
+                        background-color: #df7850;
+                        padding: 5px 12px;
+                        top: -30px;
+                        right: -12px;
+                        transition: all 0.3s ease;
+                        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+                    }
+
+                    &:hover .tooltip {
+                        visibility: visible;
+                        opacity: 1;
+                        top: 5px;
+                        right: 50px;
+                    }   
+                }
+                & img {
+                    border-radius: 15px;
+                    width: 300px;
+                    height: 300px;
+                }
             }
         }
+    }
+
+    & .most-purchased-section.hidden {
+        display: none;
+        opacity: 0;
+        max-height: 0;
+        overflow: hidden; /* Garante que o conteúdo não vaze */
+        transition: opacity 0.5s ease-out, max-height 0.5s ease-out; 
+    }
+
+    /* O estado visível */
+    & .most-purchased-section.visible {
+        opacity: 1;
+        display: flex;
+        max-height: 1000px; /* Um valor alto o suficiente para mostrar o conteúdo */
     }
 }
