--- a/src/style/Card.css
+++ b/src/style/Card.css
@@ -3,8 +3,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #fff;
   gap: 5px;
   padding: 5px;
+  width: 320px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 
@@ -24,9 +26,11 @@
     align-items: flex-start;
     border: 1px solid #000;
     border-radius: 5px;
+    font-size: .8rem;
+    font-weight: bold;
     padding: 10px;
     width: 100%;
-    height: 60px;
+    height: 100px;
     box-sizing: border-box;
   }
 
