--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -3,8 +3,8 @@ header {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    width: 100%;
-    margin: 10px 0;
+    width: 92%;
+    margin: 2% 6%;
 
     & .navbar {
         display: flex;
@@ -40,6 +40,7 @@ header {
         }
 
         & .shopping-cart-section {
+            color: #fff;
             padding: 10px;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 
@@ -49,6 +50,8 @@ header {
 
                 & img {
                     cursor: pointer;
+                    width: 40px;
+                    height: 40px;
                     transition: all 0.3s ease;
 
                     &:hover {
