--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
+    margin: 0 10px;
     min-width: 90vw;
 
     & .header-home {
@@ -33,7 +34,7 @@
         align-items: center;
         border: 1px solid #9e9d9d;
         border-radius: 8px;
-        width: 100%;
+        width: 93%;
         text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
 
         & .initial-section__title {
@@ -70,7 +71,7 @@
         border-radius: 8px;
         padding: 20px 5px;
         margin: 20px 0;
-        width: 90vw;
+        width: 85vw;
         height: 100%;
         box-sizing: border-box;
 
