--- a/src/style/Card.css
+++ b/src/style/Card.css
@@ -7,16 +7,23 @@
   gap: 5px;
   padding: 5px;
   width: 320px;
+  height: 600px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 
   & .card-header {
     padding: 5px;
+    max-height: 500px;
 
     img {
       width: 300px;
       height: 300px;
     }
+  }
+
+  & .card-title {
+    padding: 5px;
+    height: 100px;
   }
 
   & .card-description {
