--- a/src/style/Carrinho.css
+++ b/src/style/Carrinho.css
@@ -43,7 +43,8 @@
                 gap: 15px;
 
                 & img {
-                    width: 150px;
+                    width: 300px;
+                    height: 300px;
                 }
 
                 & .item-details {
@@ -52,6 +53,8 @@
                     justify-content: flex-start;
                     align-items: flex-start;
                     gap: 10px;
+                    border: 1px solid #000;
+                    width: 100%;
                     height: 100px;
 
                     & .item-name {
