--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -10,8 +10,7 @@
     color: #fff;
     padding: 15px;
     height: 10vh;
-    margin: 0 10px;
-    margin-bottom: 10px;
+    margin: 15px 10px;
     text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
 
     & .footer__content {
