--- a/src/style/Carrinho.css
+++ b/src/style/Carrinho.css
@@ -43,8 +43,23 @@
                 gap: 15px;
 
                 & img {
-                    width: 300px;
-                    height: 300px;
+                    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+                    transition: all 0.3s ease;
+
+                    &:hover {
+                        transform: translateY(-5px);
+                    }
+                }
+
+                & .carrinho-item__img {
+                    width: 350px;
+                    height: 450px;
+                }
+
+                & .img-placeholder {
+                    background-color: #ccc;
+                    width: 350px;
+                    height: 450px;
                 }
 
                 & .item-details {
@@ -52,19 +67,64 @@
                     flex-direction: column;
                     justify-content: flex-start;
                     align-items: flex-start;
-                    gap: 10px;
-                    border: 1px solid #000;
+                    gap: 30px;
+                    padding: 5px;
                     width: 100%;
                     height: 100px;
 
-                    & .item-name {
-                        font-size: 18px;
-                        font-weight: bold;
+                    & .item-details__informations {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: flex-start;
+                        align-items: flex-start;
+                        gap: 10px;
+                        text-shadow: 1px 1px 2px lightgoldenrodyellow;
+
+                        & .price {
+                            padding: 10px;
+                        }
                     }
 
-                    & .item-quantity {
-                        font-size: 14px;
-                        color: #ddd;
+                    & .item-details__button-section {
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: flex-start;
+                        align-items: flex-start;
+                        gap: 10px;
+
+                        & button {
+                            transition: all 0.5s ease;
+
+                            &:hover {
+                                transform: scale(1.1);
+                            }
+                        }
+
+                        & .btn-remover {
+                            color: #fff;
+                            background-color: #f82c2c;
+                        }
+
+                        & .btn-exit-purchase {
+                            color: #fff;
+                            background-color: #146fb9;
+                        }
+                    }
+                }
+
+                & .item-details__thumbnails {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    gap: 10px;
+                    margin: 5% 0;
+                    width: 100%;
+
+                    & .thumbnail {
+                        cursor: pointer;
+                        border-radius: 8px;
+                        width: 100px;
+                        height: 120px;
                     }
                 }
 
