--- a/src/style/Carrinho.css
+++ b/src/style/Carrinho.css
@@ -7,7 +7,7 @@
     border: 1px solid #000;
     color: #fff;
     padding: 10px;
-    margin-left: 6%;
+    margin-left: 8%;
     width: 100%;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 
@@ -22,116 +22,122 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: flex-start;
-        border: 1px solid #000;
-        padding: 10px;
+        padding: 15px;
         width: 98%;
 
-        & .carrinho-item {
+        .item-resume-section__items {
             display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            padding: 15px;
-            width: 70%;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 10px;
+            width: 100%;
 
-            & .info {
+            & .carrinho-item {
                 display: flex;
                 flex-direction: row;
-                align-items: flex-start;
-                gap: 15px;
+                justify-content: space-between;
+                align-items: center;
+                border: 1px solid #ccc;
+                border-radius: 8px;
+                padding: 15px;
+                width: 90%;
 
-                & img {
-                    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-                    transition: all 0.3s ease;
-
-                    &:hover {
-                        transform: translateY(-5px);
-                    }
-                }
-
-                & .carrinho-item__img {
-                    width: 350px;
-                    height: 450px;
-                }
-
-                & .img-placeholder {
-                    background-color: #ccc;
-                    width: 350px;
-                    height: 450px;
-                }
-
-                & .item-details {
+                & .info {
                     display: flex;
-                    flex-direction: column;
-                    justify-content: flex-start;
+                    flex-direction: row;
                     align-items: flex-start;
-                    gap: 30px;
-                    padding: 5px;
-                    width: 100%;
-                    height: 100px;
+                    gap: 10px;
 
-                    & .item-details__informations {
+                    & img {
+                        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+                        transition: all 0.3s ease;
+
+                        &:hover {
+                            transform: translateY(-5px);
+                        }
+                    }
+
+                    & .carrinho-item__img {
+                        width: 300px;
+                        height: 350px;
+                    }
+
+                    & .img-placeholder {
+                        background-color: #ccc;
+                        width: 300px;
+                        height: 350px;
+                    }
+
+                    & .item-details {
                         display: flex;
                         flex-direction: column;
                         justify-content: flex-start;
                         align-items: flex-start;
-                        gap: 10px;
-                        text-shadow: 1px 1px 2px lightgoldenrodyellow;
+                        width: 100%;
+                        height: 100px;
 
-                        & .price {
-                            padding: 10px;
-                        }
-                    }
+                        & .item-details__informations {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: flex-start;
+                            align-items: flex-start;
+                            gap: 5px;
+                            text-shadow: 1px 1px 2px lightgoldenrodyellow;
 
-                    & .item-details__button-section {
-                        display: flex;
-                        flex-direction: row;
-                        justify-content: flex-start;
-                        align-items: flex-start;
-                        gap: 10px;
-
-                        & button {
-                            transition: all 0.5s ease;
-
-                            &:hover {
-                                transform: scale(1.1);
+                            & .price {
+                                padding: 10px;
                             }
                         }
 
-                        & .btn-remover {
-                            color: #fff;
-                            background-color: #f82c2c;
-                        }
+                        & .item-details__button-section {
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: flex-start;
+                            align-items: flex-start;
+                            gap: 10px;
 
-                        & .btn-exit-purchase {
-                            color: #fff;
-                            background-color: #146fb9;
+                            & button {
+                                transition: all 0.5s ease;
+
+                                &:hover {
+                                    transform: scale(1.1);
+                                }
+                            }
+
+                            & .btn-remover {
+                                color: #fff;
+                                background-color: #f82c2c;
+                            }
+
+                            & .btn-exit-purchase {
+                                color: #fff;
+                                background-color: #146fb9;
+                            }
                         }
                     }
-                }
 
-                & .item-details__thumbnails {
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: flex-start;
-                    gap: 10px;
-                    margin: 5% 0;
-                    width: 100%;
+                    & .item-details__thumbnails {
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items: flex-start;
+                        gap: 10px;
+                        margin: 5% 0;
+                        width: 100%;
 
-                    & .thumbnail {
-                        cursor: pointer;
-                        border-radius: 8px;
-                        width: 100px;
-                        height: 120px;
+                        & .thumbnail {
+                            cursor: pointer;
+                            border-radius: 8px;
+                            width: 100px;
+                            height: 120px;
+                        }
                     }
-                }
 
-                & .item-price {
-                    font-size: 16px;
-                    font-weight: bold;
-                    margin-left: 15px;
+                    & .item-price {
+                        font-size: 16px;
+                        font-weight: bold;
+                        margin-left: 15px;
+                    }
                 }
             }
         }
