Criado página de pedido concluido, insido página no arquivo navigate e carrinho, iniciado estilo da página.

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 @import "./style/Formulario-login.css";
 @import "./style/Footer.css";
 @import "./style/Carrinho.css";
+@import "./style/Pedido-concluido.css";
 
 /* Import de animações */
 @import "./style/animations/Animation.css";
