--- a/src/style/Card.css
+++ b/src/style/Card.css
@@ -31,7 +31,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    border: 1px solid #000;
+    border: 1px solid #ccc;
     border-radius: 5px;
     font-size: .8rem;
     font-weight: bold;
